Aligned the elements and fixed the btn color and position

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -11,6 +11,11 @@ table {
   flex-direction: row;
   justify-content: flex-end;
 }
+
+.total-amount {
+  color: #41536b;
+}
+
 .custom-table-container {
   th {
     border: 1px solid #ddd;
